jogavel no browser

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RPG Arena</title>
+    <link rel="stylesheet" href="src/index.css">
 </head>
 <body>
-    <script src="../dist/basico.js" type="module"></script>
+    <div id="output"></div>
+    <input id="input" type="text" autocomplete="off" />
+    <button id="button">Enviar</button>
+    <button id="restart-button">Reiniciar Jogo</button>
+    <script src="/dist/app.browser.js " type="module"></script>
 </body>
 </html>
